# tauri-app

./: .editorconfig  .env  .env.development  .env.production  .gitattributes  .gitignore  .oxfmtrc.json  .prettierignore  .prettierrc.json  README.md  eslint.config.js  index.html  package-lock.json  package.json  schema.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  Updater.css  Updater.tsx  api.ts  index.css  main.tsx
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutDialog.tsx  mode-toggle.tsx  theme-provider.tsx
src/components/ui/: button.tsx  input.tsx  sonner.tsx
src/pages/: Dashboard.tsx  DashboardLayout.tsx  Login.tsx
src/store/: useAuthStore.ts
